--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript assessmnet</title>
-</head>
+	<title>Digital Clock</title>
+	<style>
+		.clock {
+			font-size: 48px;
+			font-family: monospace;
+			text-align: center;
+			margin-top: 50px;
+		}
+	</style>
+    
 <body>
-    <script>
-       var arr = [3,4,8,6] 
-        var output = []
-        total = 10 
-        for (var i = 0; i <= arr.length;i++){
-            for (var j = i+1; i <= arr.length;i++){
-                if (arr[i] + arr[j] == total){
-                    output.push(arr[i])
-                    output.push(arr[j])
-                }
-            }
-        }
-        if (output.length == 0){
-            document.write("[]")
-        } else{
-            document.write("["+output+"]")
-        }
-    </script>
-
-
-
+    <center>
+        <h1>My Website</h1>
+    </center>
+	<div class="clock"></div>
+	<script>
+		function updateClock() {
+			var now = new Date();
+			var hours = now.getHours();
+			var minutes = now.getMinutes();
+			var seconds = now.getSeconds();
+			var timeString = hours.toString().padStart(2, '0') + ':' +
+				minutes.toString().padStart(2, '0') + ':' +
+				seconds.toString().padStart(2, '0');
+			document.querySelector('.clock').textContent = timeString;
+		}
+		setInterval(updateClock, 1000);
+	</script>
 </body>
 </html>
